feat: enforce FD microservice event boundaries
